# AnotherAnother

./: Cargo.toml  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
crates/another-core/src/: accessibility.rs  adb.rs  macro_engine.rs  scrcpy.rs
crates/another-mcp/src/: lib.rs  main.rs  server.rs
scripts/: release.sh
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  device.json
src-tauri/icons/: icon.icns
src-tauri/src/: adb.rs  commands.rs  lib.rs  scrcpy.rs  state.rs  video.rs
src/components/: CommandBar.tsx  DeviceWindow.tsx  MacrosScreen.tsx  MirrorScreen.tsx  SettingsDialog.tsx  ToastContainer.tsx  WelcomeScreen.tsx
src/components/ui/: sidebar.tsx
src/hooks/: useConnection.ts  useDeviceSessions.ts  useTheme.ts
