[package]
name = "Another"
version = "0.1.0"
description = "Android screen another and control"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
openh264 = "0.6"
turbojpeg = "1"
base64 = "0.22"
byteorder = "1"
anyhow = "1"
socket2 = "0.5"
